Bug 366362 - [kcm] initial position of newly connected known output is wrong
Summary: [kcm] initial position of newly connected known output is wrong
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kcm (other bugs)
Version First Reported In: git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords: multiscreen
Depends on:
Blocks:
 
Reported: 2016-08-02 21:19 UTC by Sebastian Kügler
Modified: 2016-08-10 00:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
sebas: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kügler 2016-08-02 21:19:02 UTC
When a previously known output is connected while the kscreen KCM is open, it will be positioned at 0,0, not at its actual position (e.g. top-right of the laptop panel).

When closing and reopening, the position is correctly set.

Reproducible: Always

Steps to Reproduce:
1. open kcm while secondary display is disconnected
2. connect display
3. observe new display at 0,0, instead of correctly positioned in relation to the other output
Comment 1 Sebastian Kügler 2016-08-10 00:54:09 UTC
Git commit e4a5acc65d40f9dc5b9c2abeacfadf602b2da19a by Sebastian Kügler.
Committed on 10/08/2016 at 00:50.
Pushed by sebas into branch 'master'.

[kcm] correctly position newly connected outputs

Outputs appearing at runtime weren't correctly positioned, since they
initially may be disabled, and are then enabled by the kded module
loading a known config. Disabled outputs don't have a position, and we
weren't updating it when enabling the output.

We can't simply listen to the output's posChanged signal since this
leads to complex round-trip loops with async calls.

M  +4    -3    kcm/src/declarative/qmlscreen.cpp

http://commits.kde.org/kscreen/e4a5acc65d40f9dc5b9c2abeacfadf602b2da19a