[kcm] correctly position newly connected outputs

Outputs appearing at runtime weren't correctly positioned, since they
initially may be disabled, and are then enabled by the kded module
loading a known config. Disabled outputs don't have a position, and we
weren't updating it when enabling the output.

We can't simply listen to the output's posChanged signal since this
leads to complex round-trip loops with async calls.

BUG:366362